--- a/redis-deployment.yml
+++ b/redis-deployment.yml
@@ -11,3 +11,14 @@ spec:
       name: redis-pod
       app: demo-voting-app
   template:
+    metadata:
+      name: redis-pod
+      labels:
+        name: redis-pod
+        app: demo-voting-app
+    spec:
+      containers:
+      - name: redis
+        image: redis
+        ports:
+        - containerPort: 6379
